Added logic to override github shortcut keys for label selection

--- a/src/styles/labelui.css
+++ b/src/styles/labelui.css
@@ -165,7 +165,7 @@ body, .pusher {
 	color: #3B3738!important;
 }
 .custom-list-menu div.item.taken div.list-content {
-	color: #C63D0F!important;
+	color: #e62117!important;
 }
 .custom-list-menu div.item .icon {
 	margin-right: 5px!important;
