Changed color scheme for group label text

--- a/src/styles/labelui.css
+++ b/src/styles/labelui.css
@@ -192,7 +192,7 @@ body, .pusher {
 	color: #FFF7C0;
 }
 .group-container .none-group-text-content {
-	color: #77F3FF;
+	color: #C0FFD9;
 }
 .collapsed-group-container .content{
 	color: white;
