--- a/src/styles/labelui.css
+++ b/src/styles/labelui.css
@@ -139,6 +139,9 @@ body, .pusher {
 }
 
 /* Search Menu */
+.git-flash-labels-sidebar .search-container .search-field input {
+	visibility: visible!important;
+}
 .custom-list-menu-container {
 	position:relative;
 }
@@ -149,6 +152,7 @@ body, .pusher {
 	z-index: 1000;
 	word-wrap: break-word;
 	overflow-y: auto;
+	box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
 }
 .custom-list-menu div.item {
 	padding: 8px 13px 8px 13px!important;
@@ -165,7 +169,6 @@ body, .pusher {
 	color: #3B3738!important;
 }
 .custom-list-menu div.item.taken div.list-content {
-	/*color: #e62117!important;*/
 	color: #e94f64!important;
 }
 .custom-list-menu div.item .icon {
