--- a/src/styles/labelui.css
+++ b/src/styles/labelui.css
@@ -22,6 +22,11 @@ body, .pusher {
 }
 .launch.button .icon {
     padding-left: 15%;
+	color: white!important;
+	opacity: 1!important;
+}
+.launch.button .text {
+	vertical-align: middle!important;
 }
 
 /* Header */
