--- a/src/styles/labelui.css
+++ b/src/styles/labelui.css
@@ -32,7 +32,7 @@ body, .pusher {
 /* Header */
 .tag-container-header {
 	margin-top: 0.5em!important;
-	margin-bottom: 0.5em!important;
+	margin-bottom: 0!important;
 	background-color: transparent!important;
 }
 .tag-container-header .icon {
